# DTEAM-django-practical-test

./: .gitignore  README.md  TASKS.md  manage.py  pyproject.toml
CVProject/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/fixtures/: cv.json  projects.json  skills.json
main/migrations/: 0001_initial.py
main/templates/main/: base.html  cv_detail.html  cv_list.html
main/tests/: test_views.py
