[project]
name = "dteam-django-practical-test"
version = "0.1.0"
description = "test task"
authors = [
    {name = "Mykola Dolynskyi",email = "gospodin.p.zh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
